create AddBook page and category model

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "123123",
-    "database": "Book Store",
+    "username": "fusion",
+    "password": "fusion",
+    "database": "bookstore",
     "host": "localhost",
     "dialect": "postgres",
     "define": {
