--- a/book-store/package.json
+++ b/book-store/package.json
@@ -11,6 +11,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-input-range": "^1.3.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
