complete sorting logic

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,8 +1,8 @@
 {
     "development": {
-    "username": "fusion",
-    "password": "fusion",
-    "database": "bookstore",
+    "username": "postgres",
+    "password": "123123",
+    "database": "Book Store",
     "host": "localhost",
     "dialect": "postgres",
     "define": {
