--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
     "sequelize": "^6.2.3",
     "socket.io": "^2.3.0"
